Closed
Bug 857994
Opened 12 years ago
Closed 12 years ago
build failure on CentOS due to SpeechSynthesis.h: error: ‘>>’ should be ‘> >’ within a nested template argument list
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: SirR4T, Assigned: SirR4T)
References
Details
Attachments
(1 file)
|
467 bytes,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:20.0) Gecko/20100101 Firefox/20.0
Build ID: 20130326150557
Steps to reproduce:
This is my first time building from mozilla-central. Commands issued were:
hg clone https://hg.mozilla.org/mozilla-central
python bootstrap.py ## with root privilege
./mach build
probably helpful to note that `hg tip´ shows:
changeset: 127562:445d8eecdd80
tag: tip
user: Matt Brubeck <mbrubeck@mozilla.com>
date: Wed Apr 03 15:42:16 2013 -0700
summary: Bug 855593 - Support ac_add_app_options in mozbuild.mozconfig [r=gps]
Actual results:
mach throws build error as follows:
8:01.68 DOMJSProxyHandler.cpp
8:01.99 In file included from /data/sarat/mozilla/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/bindings/SpeechSynthesisBinding.cpp:15:
8:01.99 ../../dist/include/mozilla/dom/SpeechSynthesis.h:65: warning: ‘>>’ operator will be treated as two right angle brackets in C++0x
8:01.99 ../../dist/include/mozilla/dom/SpeechSynthesis.h:65: warning: suggest parentheses around ‘>>’ expression
8:01.99 ../../dist/include/mozilla/dom/SpeechSynthesis.h:65: error: ‘mSpeechQueue’ was not declared in this scope
8:01.99 ../../dist/include/mozilla/dom/SpeechSynthesis.h:65: error: ‘>>’ should be ‘> >’ within a nested template argument list
8:03.52
8:03.52 In the directory /data/sarat/mozilla/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/bindings
8:03.52 The following command failed to execute properly:
8:03.53 c++ -o SpeechSynthesisBinding.o -c -I../../dist/stl_wrappers -I../../dist/system_wrappers -include /data/sarat/mozilla/mozilla-central/config/gcc_hidden.h -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DNO_NSPR_10_SUPPORT -DEXCLUDE_SKIA_DEPENDENCIES -DOS_POSIX=1 -DOS_LINUX=1 -D_IMPL_NS_LAYOUT -I/data/sarat/mozilla/mozilla-central/ipc/chromium/src -I/data/sarat/mozilla/mozilla-central/ipc/glue -I../../ipc/ipdl/_ipdlheaders -I/data/sarat/mozilla/mozilla-central/dom/base -I/data/sarat/mozilla/mozilla-central/dom/battery -I/data/sarat/mozilla/mozilla-central/dom/encoding -I/data/sarat/mozilla/mozilla-central/dom/file -I/data/sarat/mozilla/mozilla-central/dom/power -I/data/sarat/mozilla/mozilla-central/dom/push -I/data/sarat/mozilla/mozilla-central/dom/quota -I/data/sarat/mozilla/mozilla-central/dom/media -I/data/sarat/mozilla/mozilla-central/dom/network/src -I/data/sarat/mozilla/mozilla-central/dom/settings -I/data/sarat/mozilla/mozilla-central/dom/phonenumberutils -I/data/sarat/mozilla/mozilla-central/dom/contacts -I/data/sarat/mozilla/mozilla-central/dom/permission -I/data/sarat/mozilla/mozilla-central/dom/alarm -I/data/sarat/mozilla/mozilla-central/dom/src/events -I/data/sarat/mozilla/mozilla-central/dom/src/storage -I/data/sarat/mozilla/mozilla-central/dom/src/offline -I/data/sarat/mozilla/mozilla-central/dom/src/geolocation -I/data/sarat/mozilla/mozilla-central/dom/src/notification -I/data/sarat/mozilla/mozilla-central/dom/workers -I/data/sarat/mozilla/mozilla-central/dom/time -I/data/sarat/mozilla/mozilla-central/content/xbl/src -I/data/sarat/mozilla/mozilla-central/content/xul/document/src -I/data/sarat/mozilla/mozilla-central/content/events/src -I/data/sarat/mozilla/mozilla-central/content/base/src -I/data/sarat/mozilla/mozilla-central/content/html/content/src -I/data/sarat/mozilla/mozilla-central/content/html/document/src -I/data/sarat/mozilla/mozilla-central/content/media/webaudio -I/data/sarat/mozilla/mozilla-central/content/svg/content/src -I/data/sarat/mozilla/mozilla-central/layout/generic -I/data/sarat/mozilla/mozilla-central/layout/style -I/data/sarat/mozilla/mozilla-central/layout/xul/base/src -I/data/sarat/mozilla/mozilla-central/layout/xul/tree -I/data/sarat/mozilla/mozilla-central/dom/camera -I/data/sarat/mozilla/mozilla-central/content/media/webspeech -I/data/sarat/mozilla/mozilla-central/js/xpconnect/src -I/data/sarat/mozilla/mozilla-central/js/xpconnect/wrappers -I/data/sarat/mozilla/mozilla-central/content/canvas/src -I/data/sarat/mozilla/mozilla-central/content/html/content/src -I/data/sarat/mozilla/mozilla-central/media/webrtc/signaling/src/peerconnection -I/data/sarat/mozilla/mozilla-central/dom/base -I/data/sarat/mozilla/mozilla-central/dom/battery -I/data/sarat/mozilla/mozilla-central/dom/indexedDB -I/data/sarat/mozilla/mozilla-central/content/xslt/src/base -I/data/sarat/mozilla/mozilla-central/content/xslt/src/xpath -I/data/sarat/mozilla/mozilla-central/content/xml/content/src -I/data/sarat/mozilla/mozilla-central/content/xul/content/src -I/data/sarat/mozilla/mozilla-central/content/xul/document/src -I/data/sarat/mozilla/mozilla-central/content/media/webspeech/recognition -I/data/sarat/mozilla/mozilla-central/dom/bindings -I. -I../../dist/include -I/data/sarat/mozilla/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include/nspr -I/data/sarat/mozilla/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include/nss -fPIC -Wall -Wpointer-arith -Woverloaded-virtual -Werror=return-type -Wtype-limits -Wempty-body -Wsign-compare -Wno-invalid-offsetof -Wcast-align -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fshort-wchar -pthread -pipe -DNDEBUG -DTRIMMED -g -Os -freorder-blocks -fomit-frame-pointer -Wno-uninitialized -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/SpeechSynthesisBinding.o.pp /data/sarat/mozilla/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/bindings/SpeechSynthesisBinding.cpp
8:03.53 gmake[6]: *** [SpeechSynthesisBinding.o] Error 1
8:03.53 gmake[6]: *** Waiting for unfinished jobs....
8:08.36 gmake[5]: *** [bindings_libs] Error 2
8:08.36 gmake[4]: *** [libs_tier_platform] Error 2
8:08.36 gmake[3]: *** [tier_platform] Error 2
8:08.36 gmake[2]: *** [default] Error 2
8:08.36 gmake[1]: *** [realbuild] Error 2
8:08.36 gmake: *** [build] Error 2
8:08.38 0 compiler warnings present.
Expected results:
I fixed the content/media/webspeech/synth/SpeechSynthesis.h on line 65, to replace `>>´ with `> >´.
This fixes this compile error, and build proceeds normally.
Patch File generated with ` hg diff content/media/webspeech/synth/SpeechSynthesis.h >> SpeechSynthesis.h.patch´ is attached.
| Assignee | ||
Comment 1•12 years ago
|
||
Also relevant probably, is that `c++ --version´ gives:
c++ (GCC) 4.4.7 20120313 (Red Hat 4.4.7-3)
Copyright (C) 2010 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
| Assignee | ||
Updated•12 years ago
|
Version: 20 Branch → 23 Branch
| Assignee | ||
Updated•12 years ago
|
Component: Untriaged → General
Comment 2•12 years ago
|
||
Thanks sarat! I can confirm the compilation error for this bug and bug 858012 on Debian Stable.
I'd recommend you to take a look at
https://developer.mozilla.org/en-US/docs/Introduction
about how to contribute to Gecko and get your patch accepted.
Cc'ing Olli Pettay, since he seems to have reviewed some patches to content/media/webspeech recently.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•12 years ago
|
Updated•12 years ago
|
Assignee: nobody → sarat.addepalli
Comment 3•12 years ago
|
||
Comment on attachment 733256 [details] [diff] [review]
SpeechSynthesis.h.patch
Usually you should ask review from someone.
I removed extra space and landed
https://hg.mozilla.org/integration/mozilla-inbound/rev/970a211a1d76
Attachment #733256 -
Flags: review+
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
| Assignee | ||
Comment 5•12 years ago
|
||
ooh thanks! I was stuck not knowing how to ask for review (as irc is banned from my workplace), but just noticed that I hadn't read the whole page properly. Will look into `hg blame´ from now on!
nice to know i've contributed (if only trivially) :P
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•