Bug 857994, fix compilation on some older GCCs, r=smaug